# xmobar-braillebars

./: default.nix  result  shell.nix  xmobar-braillebars.cabal
nix/: sources.json
